New changes added

--- a/doctors/src/main/resources/templates/create.html
+++ b/doctors/src/main/resources/templates/create.html
@@ -30,7 +30,7 @@
                 <input class="form-control" th:field="${citaDto.nombre}">
                 <p th:if="${#fields.hasErrors('nombre')}"
                    th:errorclass="text-danger"
-                   th:errors="${citaDto.folio}">
+                   th:errors="${citaDto.nombre}">
                 </p>
               </div>
             </div>
